[project]
name = "tasklist"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Flet developer", email = "you@example.com" }
]
dependencies = [
  "flet==0.70.0.dev6561",
  "pydantic (>=2.12.4,<3.0.0)",
  "pydantic-settings (>=2.12.0,<3.0.0)",
  "python-dotenv (>=1.2.1,<2.0.0)"
]

[dependency-groups]
dev = [
  "flet[all]==0.70.0.dev6561",
]

[tool.flet]
# Docs: https://flet.dev/docs/publish
org = "com.ravensoftanalytics"
product = "tasklist"
company = "Ravensoft"
copyright = "Copyright (C) 2025 by Ravensoft Analytics"

[tool.flet.app]
path = "src"